Move to Java 11 and Jakarta EE.